lab2/activity2/template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualMachines_WEB1_name": {
      "defaultValue": "WEB1",
      "type": "String"
    },
    "virtualMachines_WEB2_name": {
      "defaultValue": "WEB2",
      "type": "String"
    },
    "publicIPAddresses_WEB1_ip_name": {
      "defaultValue": "WEB1-ip",
      "type": "String"
    },
    "publicIPAddresses_WEB2_ip_name": {
      "defaultValue": "WEB2-ip",
      "type": "String"
    },
    "virtualNetworks_VNET_LAB1_name": {
      "defaultValue": "VNET-LAB1",
      "type": "String"
    },
    "networkSecurityGroups_NSG_WEB_name": {
      "defaultValue": "NSG-WEB",
      "type": "String"
    },
    "networkInterfaces_web1512_z2_name": {
      "defaultValue": "web1512_z2",
      "type": "String"
    },
    "networkInterfaces_web2512_z2_name": {
      "defaultValue": "web2512_z2",
      "type": "String"
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-07-01",
      "name": "[parameters('virtualNetworks_VNET_LAB1_name')]",
      "location": "eastus2",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.1.0/24"
          ]
        }
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2024-07-01",
      "name": "[concat(parameters('virtualNetworks_VNET_LAB1_name'), '/default')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_VNET_LAB1_name'))]"
      ],
      "properties": {
        "addressPrefix": "10.0.1.0/24"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-07-01",
      "name": "[parameters('networkSecurityGroups_NSG_WEB_name')]",
      "location": "eastus2",
      "properties": {}
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2024-07-01",
      "name": "[concat(parameters('networkSecurityGroups_NSG_WEB_name'), '/ALLOW-SSH')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_WEB_name'))]"
      ],
      "properties": {
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 100,
        "direction": "Inbound"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2024-07-01",
      "name": "[concat(parameters('networkSecurityGroups_NSG_WEB_name'), '/ALLOW-HTTP')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_WEB_name'))]"
      ],
      "properties": {
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "80",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 101,
        "direction": "Inbound"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-07-01",
      "name": "[parameters('publicIPAddresses_WEB1_ip_name')]",
      "location": "eastus2",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "zones": [
        "2"
      ],
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 4
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-07-01",
      "name": "[parameters('publicIPAddresses_WEB2_ip_name')]",
      "location": "eastus2",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "zones": [
        "2"
      ],
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 4
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-07-01",
      "name": "[parameters('networkInterfaces_web1512_z2_name')]",
      "location": "eastus2",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WEB1_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNET_LAB1_name'), 'default')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_WEB_name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WEB1_ip_name'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNET_LAB1_name'), 'default')]"
              },
              "primary": true
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_WEB_name'))]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-07-01",
      "name": "[parameters('networkInterfaces_web2512_z2_name')]",
      "location": "eastus2",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WEB2_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNET_LAB1_name'), 'default')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_WEB_name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WEB2_ip_name'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNET_LAB1_name'), 'default')]"
              },
              "primary": true
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_WEB_name'))]"
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-11-01",
      "name": "[parameters('virtualMachines_WEB1_name')]",
      "location": "eastus2",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_web1512_z2_name'))]"
      ],
      "zones": [
        "2"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "canonical",
            "offer": "0001-com-ubuntu-server-jammy",
            "sku": "22_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_WEB1_name')]",
          "adminUsername": "azureuser",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "/home/azureuser/.ssh/authorized_keys",
                  "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/mQqCZcnnUGzZvU+cC6gcZT8yDJIk3DHfbnMRsnuxSMRGljXLprvE7tOmBb2z8e+pOx0xpUYYDfN999P3yULf2r2oUmaDngBw4SKGye3IyvycTt12AisAFKg0PCtECsl6GSynD1YRKJtptPk5qbWIM7QR3EfkX1782QI+8FM2YvRI4MZaDnh/8ENl4OY9YpVpX8nUGoGlvoX6J6cYPFaPFV9zUhbJosvrHY0a4lVgVckD/0Cp8sxZqds46VCT62en+IN52oSkwYpQ0RtfHY5dkM2J3HlNYBA2HshLLNFSUu3RLTuPc6V4cwS5o3caimwFiBe6YPuqI+lHrnceUNHd2BRQMIKOPdK38KfFgrWTZCj6zb1Dv+zNPs/Iv/Z8TFu5xdo6WgOf3JvfKjaqCXUj+5kgoHqrWGyb+XAcatZrxH7HLc [...]
                }
              ]
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_web1512_z2_name'))]"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-11-01",
      "name": "[parameters('virtualMachines_WEB2_name')]",
      "location": "eastus2",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_web2512_z2_name'))]"
      ],
      "zones": [
        "2"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "canonical",
            "offer": "0001-com-ubuntu-server-jammy",
            "sku": "22_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_WEB2_name')]",
          "adminUsername": "azureuser",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "/home/azureuser/.ssh/authorized_keys",
                  "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/mQqCZcnnUGzZvU+cC6gcZT8yDJIk3DHfbnMRsnuxSMRGljXLprvE7tOmBb2z8e+pOx0xpUYYDfN999P3yULf2r2oUmaDngBw4SKGye3IyvycTt12AisAFKg0PCtECsl6GSynD1YRKJtptPk5qbWIM7QR3EfkX1782QI+8FM2YvRI4MZaDnh/8ENl4OY9YpVpX8nUGoGlvoX6J6cYPFaPFV9zUhbJosvrHY0a4lVgVckD/0Cp8sxZqds46VCT62en+IN52oSkwYpQ0RtfHY5dkM2J3HlNYBA2HshLLNFSUu3RLTuPc6V4cwS5o3caimwFiBe6YPuqI+lHrnceUNHd2BRQMIKOPdK38KfFgrWTZCj6zb1Dv+zNPs/Iv/Z8TFu5xdo6WgOf3JvfKjaqCXUj+5kgoHqrWGyb+XAcatZrxH7HLc [...]
                }
              ]
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_web2512_z2_name'))]"
            }
          ]
        }
      }
    }
  ]
}
